--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
             <div class="container px-5">
+                <a href="https://www.horusglobal.app/" target="_blank" rel="noopener noreferrer">
+                    <img src="https://cdn4.iconfinder.com/data/icons/social-messaging-ui-color-shapes-2-free/128/social-whatsapp-square2-512.png" alt="WhatsApp icon" style="width:40px;height:40px;border:0;">
+                </a>
                 <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Horus Exchange</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
